# csudc-rust-project-manager

desktop-app/: Cargo.toml  tailwind.config.js
desktop-app/src/: main.rs
desktop-app/src/pages/: home.rs  landing.rs  mod.rs  not_found.rs
desktop-app/src/types/: mod.rs
project-db/: Cargo.toml  test.db
project-db/migrations/2022-08-03-033948_create_tables/: down.sql  up.sql
project-db/src/: lib.rs  models.rs  schema.rs
